2005-10-18 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added net range 72.14.192.0-239.255 for Google cache

2005-10-18 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: fix typo.(nill to nil)
	* recent_trackback3.rb: fix typo.(nill to nil)
	Thanks to yowa <yowa at yowaken.dip.jp>.

2005-10-16 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add notify about amazon associate ID in preference page.

2005-10-15 zunda <zunda at freeshell.org>
	*/disp_referrer.rb: update description about Nora.
	Thanks to yowa <yowa at yowaken.dip.jp>.

2005-10-14 zunda <zunda at freeshell.org>
	* */disp_referrer.rb: update description about unknown URLs
	listed on the browser. Thanks to FUDAN <joker at comel.or.jp>.

2005-10-13 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delte category tags from title.
	* my-ex.rb: delete category tags from title.

2005-10-11 vette <vette at mail.ne.jp>
	* ping.rb: inherit checkbox status to preview page.

2005-10-11 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: delete category tags from title.

2005-10-10 TADA Tadashi <sho@spc.gr.jp>
	* my-ex.rb: my plugin: fix bug when @index was full path.

2005-10-05 TADA Tadashi <sho@spc.gr.jp>
	* tb-show.rb: never hide TrackBack in trackbackreceive mode.

2005-10-04 NT <nt@be.to>
	* tlink.rb: fix to create a cache file on ruby 1.8.
          thanks Takeshi Miyasaka <miyaken at iname.com>.

2005-09-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.3.

2005-09-28 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: remove catching SocketError.

2005-09-28 TADA Tadahi <sho@spc.gr.jp>
	* rss-recent.rb: insert a message when running on secure mode.

2005-09-27 TADA Tadahi <sho@spc.gr.jp>
	* amazon/*.png: add sample of default images.

2005-09-25 zunda <zunda at freeshell.org>
	* disp_referrer.rb: more titles to be categorized as antennas,
	generates better regexp for unknown URLs

2005-09-20 TADA Tadahi <sho@spc.gr.jp>
	* amazon.rb: use default images on tDiary.org.

2005-09-19 TADA Tadahi <sho@spc.gr.jp>