@@ -1,3 +1,6 @@
+2005-10-19  Masao Mutoh  <mutoh@highway.ne.jp>
+	* counter.rb: Fixed a problem on Win32. Reported by Ken-ichi Mito
+
 2005-10-18 zunda <zunda at freeshell.org>
 	* ja/disp_referrer.rb: added net range 72.14.192.0-239.255 for Google cache
 
